--- a/index.html
+++ b/index.html
@@ -11,80 +11,63 @@
 
 
     <script src="js/jquery.js"></script>
-    <link rel="stylesheet" href="css/leaflet-1.7.1.css"/>
-    <script src="js/leaflet-1.7.1.js"></script>
+    <link rel="stylesheet" href="css/leaflet.css"/>
+	<link rel="stylesheet" href="css/bootstrap.min.css"/>
 
+    <script src="js/leaflet.js"></script>
+	<script src="js/bootstrap.bundle.min.js"></script>
 
-	<style>
-		html, body {
-			height: 100%;
-			margin: 0;
-			background-color: #191a1a;
-		}
-		#map {
-			width: 100%;
-			height: 100%;
-			z-index: 1000;
-		}
-		.loading{
-			position: absolute;
-			left: calc(50% - 25px);
-			align-self: center;
-			z-index: 1;
-			width: 25px;
-			height: 25px;
-		}
-	</style>
-
+	<link rel="stylesheet" href="css/fonts.css"/>
+	<link rel="stylesheet" href="css/custom.css"/>
 	
 </head>
 <body style="display: flex">
+	<div class="container-fluid">
+		<div class="row flex-nowrap">
+			<div class="col">
+				<div id='map'></div>
+			</div>
+			<div class="col-auto col-md-3 col-xl-3 px-sm-2 px-0 bg-dark">
+				<div class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 text-white min-vh-100">
+					
+					<a href="/" class="d-flex align-items-center pb-3 mb-md-0 me-md-auto text-white text-decoration-none">
+						<span class="fs-5 d-none d-sm-inline"><img src="images/pdap_white_final.png" style="width: 90%;"></span>
+					</a>
+					<ul id="menu" class="text-white">
+						<li><a href="https://pdap.io">PDAP.io Homepage</a> | </li>
+						<li><a href="https://docs.pdap.io">Docs</a></li>
+					</ul>
+					
+					<hr />
 
-<img class="loading" src="loading.gif" />
+					<div class="loading">Loading Map...</div>
+					<div id="overview" style="display:none;">
+						<div class="info">Click a State for More Info!</div>
+					</div>
+					<div id="state_info" style="display:none;">
+						<button id="back" class="btn btn-success">&lt; Back</button>
+						<h2 id="state_name"></h2>
+						<h5 id="progress"></h5>
+						<span>Scrapers: <a id="repo" target="_blank"></a></span>
+					</div>
 
-<div id='map'></div>
+				</div>
+			</div>
+		</div>
+	</div>
+	
+
+<!--<img class="loading" src="loading.gif" />-->
+
+
 
 <script src="js/status.js" type="text/javascript"></script>
 <!-- too big of a file to upload, can be found here https://opendata.arcgis.com/datasets/221d727bbc044ce99dc05fbce913b4a1_0.geojson-->
 <script src="js/US_States.js" type="text/javascript"></script>
 
-<script>
-	$(document).ready(function() {
-		$('.loading').hide();
-	});
+<script src="js/main.js">
+	
 
-	var map = L.map('map').setView([39.6660603, -90.607896], 3.6);
-
-	L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw', {
-		maxZoom: 18,
-		attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors, ' +
-			'Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
-		id: 'mapbox/dark-v9',
-		tileSize: 512,
-		zoomOffset: -1
-	}).addTo(map);
-
-	// give each state a popup
-	function onEachFeature(feature, layer) {
-		var popupContent = "<p>" + feature.properties.STATE_NAME + " - " + hr_statuses[current_state[feature.properties.STATE_NAME]] + "</p> <a target='_blank' href='https://github.com/Police-Data-Accessibility-Project/Scrapers/tree/master/USA/"+abbreviations[feature.properties.STATE_NAME]+"'>Check it out on GitHub!</a>";
-
-		if (feature.properties && feature.properties.popupContent) {
-			popupContent += feature.properties.popupContent;
-		}
-
-		layer.bindPopup(popupContent);
-	}
-
-	L.geoJSON(states, {
-
-		style: function(feature) {
-			console.log(feature.properties.STATE_NAME + ': ' +current_state[feature.properties.STATE_NAME]);
-			return {color: statuses[current_state[feature.properties.STATE_NAME]]};
-			
-    	},
-
-		onEachFeature: onEachFeature
-	}).addTo(map);
 
 	
 
